--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@fuyun/generative-ai": "^0.1.3",
     "@google/generative-ai": "^0.1.3",
+    "@kangc/v-md-editor": "^2.3.18",
     "ant-design-vue": "^3.2.20",
     "axios": "^1.6.2",
     "less": "^4.2.0",
     "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.1.0",
+    "prismjs": "^1.29.0",
     "qs": "^6.11.1",
     "rollup-plugin-visualizer": "^5.9.2",
     "unplugin-auto-import": "^0.17.2",
